--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,13 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# PyCharm
+.idea
+
+# VS Code
+.vscode
+*.code-workspace
+
+# Windows environment config
+*.bat
